--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ahooks": "^3.8.4",
     "antd": "^5.24.8",
     "dayjs": "^1.11.13",
+    "handlebars": "^4.7.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.2"
@@ -20,6 +21,8 @@
   "devDependencies": {
     "@rsbuild/core": "^1.3.1",
     "@rsbuild/plugin-react": "^1.1.1",
+    "@types/handlebars": "^4.1.0",
+    "@types/node": "^20.10.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "typescript": "^5.8.2"
